Work Page Editable Implemented

--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -33,6 +33,12 @@
         <button
           class="side-option-button"
           routerLinkActive="side-option-active"
+          routerLink="/create-work"
+          (click)="onCreateWorkCall()">Criar Obra
+        </button>
+        <button
+          class="side-option-button"
+          routerLinkActive="side-option-active"
           routerLink="/my-logs"
           (click)="onMyLogsCall()">Os Meus Registos
         </button>
