--- a/code/js/front-end/src/app/create-work/create-work.component.css
+++ b/code/js/front-end/src/app/create-work/create-work.component.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+}
 
 .header {
   display: flex;
@@ -6,129 +12,38 @@
 }
 
 .small-button {
-  width: 2%;
-  height: auto;
-  margin: 10px;
-  background-color: white;
-  border: none;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
 }
 
 .small-icon {
-  font-size: 200%;
+  font-size: 30px;
+  margin-right: 5px;
 }
 
-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  flex-direction: column; /* Ensure content is arranged in a column */
-}
-
-.input {
-  margin: 5px;
-  text-align: center;
-}
-
-.selector {
-  margin: 5px;
-  width: 200px;
-}
-
-.button {
-  margin-top: 10px; /* Add some space between inputs and button */
-  background-color: #FF7A00;
-  color: white;
+.important-icon {
+  margin-right: 5px !important;
 }
 
 .content {
-  display: flex;
-  justify-content: space-between;
-  height: auto;
-  overflow: hidden;
-}
-
-.left-section {
-  font-size: 0.8em;
-  width: 50%;
-  height: inherit;
-  text-align: center;
-}
-
-.input-container {
   width: 100%;
-  margin: 0 auto;
-}
-
-.input {
-  margin-bottom: 6px;
-}
-
-label {
-  font-size: 0.9em;
-  margin-bottom: 5px;
-}
-
-input[type="text"], select {
-  font-size: 0.9em;
-  padding: 5px;
-  margin-bottom: 2px;
-}
-
-.submit-button {
-  font-size: 0.9em;
-  padding: 5px 10px;
-}
-
-.right-section {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.table-container {
-  max-height: 60%; /* Adjust based on your row height */
-  width: auto;
-  overflow-y: auto;
 }
 
 .table {
-  width: 100%;
-  background-color: #11113D;
-  max-width: 100%;
+  width: 80%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  max-height: 100%;
+  overflow: auto;
 }
-
-.table th, .table td {
-  text-align: center;
-  white-space: nowrap;
-}
-
-.table th {
-  color: #FF7A00;
-}
-
-.table td {
-  color: white;
-}
-
-.remove-button {
-  height: auto;
-  width: auto;
-  background-color: white;
-  color: black;
-}
-
-.remove-button:hover {
-  background-color: red;
-  color: white;
-}
-
 
 .add-button {
   height: auto;
   width: auto;
-  background-color: white;
-  color: black;
-  margin-left: 5px;
+  border: 1px solid #FF7A00;
+  background-color: #11113D;
+  color: #FF7A00;
 }
 
 .add-button:hover {
@@ -136,15 +51,138 @@ input[type="text"], select {
   color: white;
 }
 
-.title {
-  margin: 5px;
+.remove-button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
-.same-line-input-container {
+.remove-button .fab-style {
+  width: 30px;
+  height: 30px;
+  border-radius: 75%;
+  background-color: white;
+  color: black;
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
-.same-line-input-container .input {
-  flex: 1; /* Make the input take up the remaining space */
+.remove-button .fab-style:hover {
+  background-color: red;
+  color: white;
+}
+
+.submit-button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.submit-button .fab-style {
+  width: 30px;
+  height: 30px;
+  border-radius: 75%;
+  background-color: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submit-button .fab-style:hover {
+  background-color: green;
+  color: white;
+}
+
+.technicians table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+label {
+  font-size: 14px;
+}
+
+.title {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+input {
+  height: 17px;
+  max-width: 140px;
+  border: 1px solid #11113D;
+  border-radius: 5px;
+  padding: 5px 5px;
+}
+
+select {
+  max-height: 30px;
+  width: 200px;
+  border: 1px solid #11113D;
+  border-radius: 5px;
+  padding: 5px 5px;
+}
+
+mat-label {
+  font-size: 14px;
+  margin-right: 15px;
+  margin-left: 20px;
+}
+
+.topic {
+  margin-bottom: 10px;
+}
+
+.topic div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.topic-orientation {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.technicians th, .technicians td {
+  border: 1px solid #FF7A00;
+  text-align: center;
+  width: 20% !important;
+  max-width: 20% !important;
+}
+
+.technicians th {
+  background-color: #11113D;
+  color: #FF7A00;
+}
+
+.technicians tr:nth-child(even) {
+  background-color: #f3f3f3;
+}
+
+.submit {
+  display: block; /* Adicione isso para assegurar que o margin auto funcione */
+  margin: 20px auto; /* Centraliza horizontalmente e adiciona margem vertical */
+  padding: 10px;
+  background-color: #11113D;
+  border-radius: 5px;
+  border: 2px solid #FF7A00;
+  color: #FF7A00;
+  user-select: none;
+  text-align: center; /* Centraliza o texto dentro do botão */
+}
+
+.submit:hover {
+  background-color: #FF7A00;
+  color: white;
+  cursor: pointer;
 }
