--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -40,7 +40,7 @@
           class="side-option-button"
           routerLinkActive="side-option-active"
           routerLink="/my-logs"
-          (click)="onMyLogsCall()">Os Meus Registos
+          (click)="onMyLogsCall()">Todos os Registos
         </button>
         <button *ngIf="checkAdminRole()"
           class="side-option-button"
