--- a/code/js/front-end/src/app/work-details/work-details.component.css
+++ b/code/js/front-end/src/app/work-details/work-details.component.css
@@ -75,6 +75,10 @@
   color: #333;
 }
 
+.sidebar-menu-text button {
+  color: #FF7A00;
+}
+
 .small-button {
   display: flex;
   align-items: center;
@@ -152,7 +156,33 @@ form {
 
 .image-container {
   width: 100%; /* or a fixed width, e.g., 200px */
-  aspect-ratio: 1/1; /* maintain a 1:1 aspect ratio */
+  aspect-ratio: 1/1;
+  overflow: hidden; /* garantir que o conteúdo extra seja cortado */
+  position: relative; /* para uso com posição absoluta da imagem */
+}
+
+.image-container-change {
+  width: 100%; /* or a fixed width, e.g., 200px */
+  aspect-ratio: 1/1;
+  overflow: hidden; /* garantir que o conteúdo extra seja cortado */
+  position: relative; /* para uso com posição absoluta da imagem */
+}
+
+.image-container-change:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.image-container-change img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* garante que a imagem preencha o contêiner mantendo a proporção */
+  object-position: center; /* centra a imagem no contêiner */
 }
 
 .work-image {
@@ -219,6 +249,11 @@ strong {
 .notification-text {
   font-size: 0.9em;
   color: #333;
+}
+
+change-picture-button-text {
+  font-size: 0.9em;
+  color: #FF7A00 !important;
 }
 
 .notification-icon {
@@ -478,4 +513,31 @@ select {
 .submit-button .fab-style:hover {
   background-color: green;
   color: white;
+}
+
+.edit {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #11113D;
+  border-radius: 5px;
+  border: 2px solid #FF7A00;
+  color: #FF7A00 !important;
+  height: 2%;
+  user-select: none;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-right: 10px;
+}
+
+.edit:hover {
+  background-color: #FF7A00;
+  color: white;
+  cursor: pointer;
+}
+
+.edit-picture-button {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
