--- a/code/js/front-end/src/styles.css
+++ b/code/js/front-end/src/styles.css
@@ -1,4 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  --mdc-snackbar-container-color: #11113D;
+  --mat-snack-bar-button-color: #FF7A00;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.snackbar-popup {
+  color: white !important;
+  padding: 0 !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
